[fix] fix particles bug on smaller screen size

--- a/src/styles/landing-page.scss
+++ b/src/styles/landing-page.scss
@@ -36,6 +36,10 @@
     }
 }
 
+#tsparticles {
+    height: 100%;
+}
+
 .section {
     padding: 96px 0;
 
